add order fumctionality

--- a/src/app/addproduct/addproduct.component.css
+++ b/src/app/addproduct/addproduct.component.css
@@ -1,4 +1,4 @@
-.container {
+/* .container {
   width: 60em;
   margin-top: 3em;
 }
@@ -25,4 +25,7 @@ header {
   margin-top: 2em;
   margin-right: 10em;
   float: right;
+} */
+h5 {
+  margin-left: 16pc;
 }
