--- a/src/app/addproduct/addproduct.component.html
+++ b/src/app/addproduct/addproduct.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<!-- <div class="container">
   <form [formGroup]="productform" (ngSubmit)="onsubmit()">
     <header class="text-center">Add Product Details</header>
     <div class="row">
@@ -52,4 +52,57 @@
     <button type="reset" class="btn btn-danger">Clear Details</button>
     <button type="submit" class="btn btn-primary">Add Product</button>
   </form>
-</div>
+</div> -->
+
+<!-- Button trigger modal -->
+<!-- <button
+  type="button"
+  class="btn btn-primary"
+  data-bs-toggle="modal"
+  data-bs-target="#exampleModal"
+>
+  Launch login modal
+</button>
+
+<div
+  class="modal fade"
+  id="exampleModal"
+  tabindex="-1"
+  aria-labelledby="exampleModalLabel"
+  aria-hidden="true"
+>
+  <div class="modal-dialog modal-md">
+    <div class="modal-content border-0">
+      <div class="modal-header border-0">
+        <h5 class="modal-title" id="exampleModalLabel">Login</h5>
+        <button
+          type="button"
+          class="btn-close"
+          data-bs-dismiss="modal"
+          aria-label="Close"
+        ></button>
+      </div>
+      <div class="modal-body">
+        <div class="container">
+          <form id="loginForm">
+            <div class="form-group">
+              <input
+                type="text"
+                class="form-control mb-3"
+                placeholder="Username"
+                required
+              />
+              <input
+                type="password"
+                class="form-control mb-3"
+                placeholder="Password"
+                required
+              />
+              <button type="submit" class="btn btn-primary w-100">Login</button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+</div> -->
