--- a/src/app/products/products.component.css
+++ b/src/app/products/products.component.css
@@ -44,3 +44,13 @@ h3 {
   margin-right: 10em;
   float: right;
 }
+
+.table td img {
+  width: 50px;
+  height: auto;
+}
+
+.table th,
+.table td {
+  text-align: center;
+}
