--- a/src/app/testnomial/testnomial.component.html
+++ b/src/app/testnomial/testnomial.component.html
@@ -3,6 +3,7 @@
     id="carouselExampleControls"
     class="carousel slide"
     data-bs-ride="carousel"
+    data-bs-interval="2000"
   >
     <div class="carousel-inner">
       <div class="carousel-item active">
