--- a/src/app/productdetails/productdetails.component.css
+++ b/src/app/productdetails/productdetails.component.css
@@ -3,15 +3,18 @@
   display: flex;
   flex-direction: row;
   padding: 20px;
+  margin-left: 6pc;
 }
 
 .product-image img {
-  max-width: 500px;
-  border-radius: 10px;
+  border-radius: 0px;
+  max-width: 400px;
+  border: 2px solid burlywood;
 }
 
 .product-details {
   margin-left: 20px;
+  margin-top: 9pc;
 }
 
 .product-name {
@@ -51,7 +54,8 @@
 .add-to-bag,
 .shop-now {
   padding: 10px 20px;
-  margin-right: 10px;
+  margin-top: 0pc;
+  margin-right: 3pc;
   cursor: pointer;
 }
 
