--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -32,8 +32,8 @@
     <nav class="nav flex-column">
       <a class="nav-link" routerLink="products">Product List</a>
       <a class="nav-link" routerLink="orders">Orders</a>
-      <a class="nav-link" routerLink="adminl">Admin List</a>
-      <a class="nav-link" routerLink="users">Users List</a>
+      <a class="nav-link" routerLink="adminlist">Admin List</a>
+      <a class="nav-link" routerLink="users-list">Users List</a>
       <a class="nav-link" (click)="islogout()">Log Out</a>
     </nav>
   </div>
