--- a/src/app/productdetails/productdetails.component.html
+++ b/src/app/productdetails/productdetails.component.html
@@ -1,4 +1,41 @@
-<div class="product-container">
+<app-navbar></app-navbar>
+<div class="container-fluid" id="con1">
+  <div class="container-fluid">
+    <h2 class="">shop now</h2>
+  </div>
+</div>
+
+<div class="container" id="con">
+  <div class="row">
+    <div class="col">
+      <div class="product-img">
+        <img src="../assets/p-1.jpg" alt="" />
+      </div>
+    </div>
+    <div class="col">
+      <div class="details">
+        <h1>powder</h1>
+        <div class="price">250/-</div>
+        <div class="rating">****</div>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam magni
+          eum amet, id cum omnis ab laboriosam accusantium tempora quibusdam,
+          adipisci sapiente sit cupiditate maxime tempore eaque est repellendus
+          eveniet.
+        </p>
+        <div class="quantity">3</div>
+        <button>add to cart</button>
+        <button>shop now <i class="bi bi-arrow-up-right"></i></button>
+        <hr />
+        SKU: Graters-1-8 <br />
+        Categories: Compact Powder, Facial Kit <br />
+        Tag: Moisturizer
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- <div class="product-container" id="con3">
   <div class="row">
     <div class="col">
       <div class="product-image">
@@ -29,57 +66,6 @@
       </div>
     </div>
   </div>
-</div>
-
-<div class="container" id="c-2">
-  <div class="row">
-    <div class="col">
-      <div class="card">
-        <img src="../assets/cream.jpg" alt="" />
-        <div class="details">
-          <div class="pname text-center">product details</div>
-          <p class="text-success text-center">Upto 20% off 1000</p>
-          <div class="cost text-center">only 800/-</div>
-          <button class="btn btn-success form-control">shop now</button>
-          <i class="bi bi-heart"></i>
-        </div>
-      </div>
-    </div>
-    <div class="col">
-      <div class="card">
-        <img src="../assets/cream.jpg" alt="" />
-        <div class="details">
-          <div class="pname text-center">product details</div>
-          <p class="text-success text-center">Upto 20% off 1000</p>
-          <div class="cost text-center">only 800/-</div>
-          <button class="btn btn-success form-control">shop now</button>
-          <i class="bi bi-heart"></i>
-        </div>
-      </div>
-    </div>
-    <div class="col">
-      <div class="card">
-        <img src="../assets/cream.jpg" alt="" />
-        <div class="details">
-          <div class="pname text-center">product details</div>
-          <p class="text-success text-center">Upto 20% off 1000</p>
-          <div class="cost text-center">only 800/-</div>
-          <button class="btn btn-success form-control">shop now</button>
-          <i class="bi bi-heart"></i>
-        </div>
-      </div>
-    </div>
-    <div class="col">
-      <div class="card">
-        <img src="../assets/cream.jpg" alt="" />
-        <div class="details">
-          <div class="pname text-center">product details</div>
-          <p class="text-success text-center">Upto 20% off 1000</p>
-          <div class="cost text-center">only 800/-</div>
-          <button class="btn btn-success form-control">shop now</button>
-          <i class="bi bi-heart"></i>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
+</div> -->
+<app-cards></app-cards>
+<app-footer></app-footer>
