--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -1,69 +1,4 @@
-<nav class="navbar navbar-expand-sm fixed-top">
-  <div class="container-fluid">
-    <a class="navbar-brand" routerLink="/">
-      <h3>Beauty<span>Care</span>.</h3>
-    </a>
-    <button
-      class="navbar-toggler"
-      type="button"
-      data-bs-toggle="collapse"
-      data-bs-target="#navbarNav"
-      aria-controls="navbarNav"
-      aria-expanded="false"
-      aria-label="Toggle navigation"
-    >
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/" fragment="home">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/" fragment="about">About</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/userpr">Shopping</a>
-        </li>
-
-        <li class="nav-item">
-          <a
-            class="nav-link"
-            routerLink="/landin"
-            data-bs-toggle="modal"
-            data-bs-target="#regiModal"
-            >Signup</a
-          >
-        </li>
-
-        <li class="nav-item">
-          <a
-            class="nav-link"
-            routerLink="/landin"
-            data-bs-toggle="modal"
-            data-bs-target="#loginModal"
-            >login</a
-          >
-        </li>
-      </ul>
-    </div>
-    <div class="collapse navbar-collapse justify-content-end">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <i class="bi bi-bag"></i>
-        </li>
-
-        <li class="nav-item">
-          <i class="bi bi-person"></i>
-        </li>
-        <li class="nav-item">
-          <i class="bi bi-heart"></i>
-        </li>
-      </ul>
-    </div>
-  </div>
-</nav>
-
+<app-navbar></app-navbar>
 <div class="container-fluid" id="con1">
   <div class="row">
     <div #content class="col-5 content">
@@ -132,7 +67,7 @@
         <img src="../assets/rexap,.webp" alt="" />
       </div>
       <div class="text">
-        <p>REVEAL YOUR BEAUTY</p>
+        <span>REVEAL YOUR BEAUTY</span>
         <h2>Trending Beauty Cosmetics</h2>
       </div>
 
@@ -288,7 +223,9 @@
         </tr>
       </table>
 
-      <button class="btn">Explore Now</button>
+      <button class="btn">
+        Explore Now <i class="bi bi-arrow-up-right"></i>
+      </button>
     </div>
     <div #content class="col-5 d-flex content">
       <div class="box">
@@ -660,30 +597,4 @@
     </div>
   </div>
 </div>
-<div class="container-fluid" id="con10">
-  <footer>
-    <div class="container">
-      <div class="row">
-        <div class="col">
-          <h3>we are social at</h3>
-          <div class="box">
-            <i class="bi bi-instagram"></i>
-            <i class="bi bi-whatsapp"></i>
-            <i class="bi bi-linkedin"></i>
-            <i class="bi bi-github"></i>
-          </div>
-        </div>
-        <div class="col">
-          <h3>we are social at</h3>
-        </div>
-        <div class="col">
-          <h3>we are social at</h3>
-          <i class="bi bi-instagram"></i>
-          <i class="bi bi-whatsapp"></i>
-          <i class="bi bi-linkedin"></i>
-          <i class="bi bi-whatsapp"></i>
-        </div>
-      </div>
-    </div>
-  </footer>
-</div>
+<app-footer></app-footer>
