--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,1 +1,53 @@
-<p>navbar works!</p>
+<nav class="navbar navbar-expand-sm fixed-top">
+  <div class="container-fluid">
+    <a class="navbar-brand" routerLink="/">
+      <h3>Beauty<span>Care</span>.</h3>
+    </a>
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-bs-toggle="collapse"
+      data-bs-target="#navbarNav"
+      aria-controls="navbarNav"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" routerLink="home">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/" fragment="about">About</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/products">Shopping</a>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/home">Gallery</a>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/home">Blog</a>
+        </li>
+      </ul>
+    </div>
+    <div class="collapse navbar-collapse justify-content-end">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <i class="bi bi-bag"></i>
+        </li>
+
+        <li class="nav-item">
+          <i class="bi bi-person"></i>
+        </li>
+        <li class="nav-item">
+          <i class="bi bi-heart"></i>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
