--- a/src/app/user-products/user-products.component.css
+++ b/src/app/user-products/user-products.component.css
@@ -1,32 +1,32 @@
-nav {
-  border-bottom: 3px solid;
-}
-.nav-item {
-  font-size: 1.3em;
-  font-weight: 600;
-  margin-left: 2px;
-}
-.active {
-  border-bottom: 3px solid rgb(236, 59, 59);
-}
-.nav-item:hover {
-  padding: 0px;
-  border-bottom: 3px solid rgb(236, 59, 59);
-}
 #car {
   margin-top: 5pc;
 }
 
-input {
-  border: none;
-  border-bottom: 3px solid;
-  width: 30pc;
-  margin-left: 5pc;
+#con1 {
+  background: url("/assets/bread-crumb-img.jpg");
+  background-size: cover;
+  height: 70vh;
 }
+#con1 .container-fluid {
+  padding-top: 5pc;
+  height: 70vh;
+  background-color: rgba(236, 229, 204, 0.5);
+}
+
+#con2 {
+  margin-top: 5pc;
+}
+#con2 .box input {
+  width: 80%;
+  padding: 5px;
+  border: 1px solid;
+  background: transparent;
+}
+
 i {
+  cursor: pointer;
   font-size: 30px;
   margin-left: 1pc;
-  color: red;
 }
 
 #c-1 {
@@ -70,30 +70,49 @@ i {
 #c-2 {
   margin-top: 5pc;
   margin-bottom: 5pc;
+  align-items: center;
 }
 
 #c-2 .card {
-  width: 18pc;
-  height: 26.9pc;
-  border: 3px solid burlywood;
+  background: transparent;
+  border: none;
+  width: 20pc;
+  height: 26pc;
   overflow: hidden;
+  box-shadow: 0 0 25px rgb(0 0 0 / 10%);
+  transition: all 0.2s ease-in-out;
+}
+#c-2 .card:hover {
+  background: transparent;
+  border: none;
+  width: 22pc;
+  height: 27pc;
+  overflow: hidden;
+  box-shadow: 0 0 30px rgb(0 0 0 / 50%);
 }
 #c-2 .row {
   margin-bottom: 5pc;
 }
-#c-2 .card i {
+#c-2 i {
   z-index: 1;
-  color: #ffff;
+  color: #211f1f;
   position: relative;
-  bottom: 30pc;
-  left: 17pc;
+  bottom: 32pc;
+  left: 16pc;
   font-size: 2rem;
 }
 #c-2 .card img {
-  width: 18pc;
-  height: 18pc;
+  width: 20pc;
+  height: auto;
+  transition: all 0.2s ease-in-out;
 }
+#c-2 .card img:hover {
+  width: 22pc;
+  height: auto;
+}
+
 .details {
+  margin-top: 5px;
   font-size: 20px;
   font-weight: 600;
 }
