--- a/src/app/user-products/user-products.component.html
+++ b/src/app/user-products/user-products.component.html
@@ -1,49 +1,69 @@
-<nav class="navbar navbar-expand-sm bg-light fixed-top">
-  <div class="container">
-    <a class="navbar-brand" routerLink="/">
-      <h3>Beauty<span>Care</span>.</h3>
-    </a>
+<app-navbar></app-navbar>
+<div class="container-fluid" id="con1">
+  <div class="container-fluid">
+    <h2 class="">shop now</h2>
+  </div>
+</div>
 
-    <input
-      type="search "
-      class="form-control"
-      placeholder="search products/brands.."
-    />
-    <i class="bi bi-search"></i>
-
-    <button
-      class="navbar-toggler"
-      type="button"
-      data-bs-toggle="collapse"
-      data-bs-target="#navbarNav"
-      aria-controls="navbarNav"
-      aria-expanded="false"
-      aria-label="Toggle navigation"
-    >
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav ms-auto">
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/home">Home</a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link" routerLink="/" fragment="home">Categories</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/" fragment="about">orders</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/" fragment="skills">favorites</a>
-        </li>
-
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/landing">login</a>
-        </li>
-      </ul>
+<div class="container" id="con2">
+  <div class="row">
+    <div class="col">
+      <div class="box">
+        <div class="dropdown">
+          <button
+            class="btn dropdown-toggle"
+            id="dropdownMenuButton"
+            data-bs-toggle="dropdown"
+            aria-haspopup="true"
+          >
+            product categories
+          </button>
+          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+            <div class="dropdown-item">Creams</div>
+            <div class="dropdown-item">Powders</div>
+            <div class="dropdown-item">Spraces</div>
+            <div class="dropdown-item">Maks</div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col">
+      <div class="box d-flex">
+        <input
+          type="search"
+          name=""
+          id=""
+          placeholder="search products/brands..."
+        />
+        <i class="bi bi-search"></i>
+      </div>
+    </div>
+    <div class="col">
+      <div class="box justify-content-end d-flex">
+        <div class="dropdown">
+          <button
+            class="btn dropdown-toggle"
+            id="dropdownMenuButton"
+            data-bs-toggle="dropdown"
+            aria-haspopup="true"
+          >
+            sorting products
+          </button>
+          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+            <div class="dropdown-item">Latest</div>
+            <div class="dropdown-item">low price</div>
+            <div class="dropdown-item">popularity</div>
+            <div class="dropdown-item">hight price</div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
-</nav>
+</div>
+
+<!------------ products----------------->
+
+<app-cards></app-cards>
 
 <div class="container-fluid" id="car">
   <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
@@ -92,206 +112,6 @@
   </div>
 </div>
 
-<!-- --------logo-------- -->
-
-<div class="container" id="c-1">
-  <div class="box d-flex justify-content-center justify-content-spacebetween">
-    <div class="card d-flex justify-content-center m1">
-      <img src="../assets/original.png" alt="" />
-      <div class="text text-center">
-        Authentic <br />
-        products
-      </div>
-    </div>
-    <div class="card d-flex justify-content-center m2">
-      <img src="../assets/log2.png" alt="" />
-      <div class="text text-center">
-        Free <br />
-        Delivery*
-      </div>
-    </div>
-    <div class="card d-flex justify-content-center m3">
-      <img src="../assets/box.png" alt="" />
-      <div class="text text-center">
-        Easy Exchange <br />
-        And Return
-      </div>
-    </div>
-    <div class="card d-flex justify-content-center m4">
-      <img src="../assets/delivery.png" alt="" />
-      <div class="text text-center">
-        Express <br />
-        Store Pickup
-      </div>
-    </div>
-    <div class="card d-flex justify-content-center m5">
-      <img src="../assets/last.png" alt="" />
-      <div class="text text-center">
-        Free Alteration <br />
-        At Store
-      </div>
-    </div>
-  </div>
-</div>
-<!------------ products----------------->
-<div class="container" id="c-2">
-  <div class="row d-flex justify-content-center">
-    <div class="col-3" *ngFor="let p of products">
-      <div class="card">
-        <img [src]="p.imageUrl" alt="Product Image" />
-
-        <div class="details">
-          <div class="pname text-center">{{ p.pname }}</div>
-          <p class="text-success text-center">Upto 20% off 1000</p>
-          <div class="cost text-center">only {{ p.price }}/-</div>
-          <button
-            class="btn btn-success form-control"
-            (click)="shopnow(p.productid)"
-          >
-            shop now
-          </button>
-          <i class="bi bi-heart"></i>
-        </div>
-      </div>
-    </div>
-    <div class="col-3">
-      <div class="card">
-        <img src="../assets/cream.jpg" alt="" />
-        <div class="details">
-          <div class="pname text-center">product details</div>
-          <p class="text-success text-center">Upto 20% off 1000</p>
-          <div class="cost text-center">only 800/-</div>
-          <button class="btn btn-success form-control">shop now</button>
-          <i class="bi bi-heart"></i>
-        </div>
-      </div>
-    </div>
-    <div class="col-3">
-      <div class="card">
-        <img src="../assets/cream.jpg" alt="" />
-        <div class="details">
-          <div class="pname text-center">product details</div>
-          <p class="text-success text-center">Upto 20% off 1000</p>
-          <div class="cost text-center">only 800/-</div>
-          <button class="btn btn-success form-control">shop now</button>
-          <i class="bi bi-heart"></i>
-        </div>
-      </div>
-    </div>
-
-    <div class="col-3">
-      <div class="card">
-        <img src="../assets/cream.jpg" alt="" />
-        <div class="details">
-          <div class="pname text-center">product details</div>
-          <p class="text-success text-center">Upto 20% off 1000</p>
-          <div class="cost text-center">only 800/-</div>
-          <button class="btn btn-success form-control">shop now</button>
-          <i class="bi bi-heart"></i>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col">
-      <div class="card">
-        <img src="../assets/cream.jpg" alt="" />
-        <div class="details">
-          <div class="pname text-center">product details</div>
-          <p class="text-success text-center">Upto 20% off 1000</p>
-          <div class="cost text-center">only 800/-</div>
-          <button class="btn btn-success form-control">shop now</button>
-          <i class="bi bi-heart"></i>
-        </div>
-      </div>
-    </div>
-    <div class="col">
-      <div class="card">
-        <img src="../assets/cream.jpg" alt="" />
-        <div class="details">
-          <div class="pname text-center">product details</div>
-          <p class="text-success text-center">Upto 20% off 1000</p>
-          <div class="cost text-center">only 800/-</div>
-          <button class="btn btn-success form-control">shop now</button>
-          <i class="bi bi-heart"></i>
-        </div>
-      </div>
-    </div>
-    <div class="col">
-      <div class="card">
-        <img src="../assets/cream.jpg" alt="" />
-        <div class="details">
-          <div class="pname text-center">product details</div>
-          <p class="text-success text-center">Upto 20% off 1000</p>
-          <div class="cost text-center">only 800/-</div>
-          <button class="btn btn-success form-control">shop now</button>
-          <i class="bi bi-heart"></i>
-        </div>
-      </div>
-    </div>
-    <div class="col">
-      <div class="card">
-        <img src="../assets/cream.jpg" alt="" />
-        <div class="details">
-          <div class="pname text-center">product details</div>
-          <p class="text-success text-center">Upto 20% off 1000</p>
-          <div class="cost text-center">only 800/-</div>
-          <button class="btn btn-success form-control">shop now</button>
-          <i class="bi bi-heart"></i>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col">
-      <div class="card">
-        <img src="../assets/cream.jpg" alt="" />
-        <div class="details">
-          <div class="pname text-center">product details</div>
-          <p class="text-success text-center">Upto 20% off 1000</p>
-          <div class="cost text-center">only 800/-</div>
-          <button class="btn btn-success form-control">shop now</button>
-          <i class="bi bi-heart"></i>
-        </div>
-      </div>
-    </div>
-    <div class="col">
-      <div class="card">
-        <img src="../assets/cream.jpg" alt="" />
-        <div class="details">
-          <div class="pname text-center">product details</div>
-          <p class="text-success text-center">Upto 20% off 1000</p>
-          <div class="cost text-center">only 800/-</div>
-          <button class="btn btn-success form-control">shop now</button>
-          <i class="bi bi-heart"></i>
-        </div>
-      </div>
-    </div>
-    <div class="col">
-      <div class="card">
-        <img src="../assets/cream.jpg" alt="" />
-        <div class="details">
-          <div class="pname text-center">product details</div>
-          <p class="text-success text-center">Upto 20% off 1000</p>
-          <div class="cost text-center">only 800/-</div>
-          <button class="btn btn-success form-control">shop now</button>
-          <i class="bi bi-heart"></i>
-        </div>
-      </div>
-    </div>
-    <div class="col">
-      <div class="card">
-        <img src="../assets/cream.jpg" alt="" />
-        <div class="details">
-          <div class="pname text-center">product details</div>
-          <p class="text-success text-center">Upto 20% off 1000</p>
-          <div class="cost text-center">only 800/-</div>
-          <button class="btn btn-success form-control">shop now</button>
-          <i class="bi bi-heart"></i>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+
+<app-footer></app-footer>
