--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Ubuntu:wght@400;500;700&display=swap");
 
 body {
-  font-family: "Ubuntu", sans-serif;
+  font-family: "lato", sans-serif;
   background: #fcf7ee;
 }
