--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -1,9 +1,7 @@
 <app-navbar></app-navbar>
 <div class="container-fluid" id="con1">
   <div class="row">
-    <div #content class="col-5 content">
-      <img src="../assets/bg-111.png" alt="" />
-    </div>
+    <div class="col-1"></div>
     <div #content class="col-7 content">
       <div class="text">
         <h5>FASTEST GROWING</h5>
@@ -20,6 +18,7 @@
         <button class="btn btn-light">Browse Collections</button>
       </div>
     </div>
+    <div #content class="col-4 content"></div>
   </div>
 </div>
 
