--- a/src/app/cards/cards.component.html
+++ b/src/app/cards/cards.component.html
@@ -1,36 +1,22 @@
 <div class="container-fluid" id="c-2">
   <div class="row d-flex justify-content-center">
-    <!-- <div class="col-3" *ngFor="let p of products">
+    <div
+      class="col-3"
+      *ngFor="let p of products"
+      (click)="shopnow(p.productid)"
+    >
       <div class="card">
         <img [src]="p.imageUrl" alt="Product Image" />
-
-        <div class="details">
-          <div class="pname text-center">{{ p.pname }}</div>
-          <p class="text-success text-center">Upto 20% off 1000</p>
-          <div class="cost text-center">only {{ p.price }}/-</div>
-          <button
-            class="btn btn-success form-control"
-            (click)="shopnow(p.productid)"
-          >
-            shop now
-          </button>
-          <i class="bi bi-heart"></i>
-        </div>
-      </div>
-    </div> -->
-
-    <div class="col-3">
-      <div class="card">
-        <img src="../assets/p-1.jpg" alt="" />
       </div>
       <div class="details">
-        <div class="pname text-center">Brightening Cream</div>
+        <div class="pname text-center">{{ p.pname }}</div>
         <p class="text-danger text-center">Upto 20% off 1000</p>
-        <div class="cost text-center">only 800/-</div>
+        <div class="cost text-center">only {{ p.price }}/-</div>
 
         <i class="bi bi-heart"></i>
       </div>
     </div>
+
     <div class="col-3">
       <div class="card">
         <img src="../assets/p2.jpg" alt="" />
@@ -69,25 +55,6 @@
       </div>
     </div>
 
-    <!-- <div class="row d-flex justify-content-center">
-      <div class="col-3" *ngFor="let p of products">
-        <div class="card">
-          <img [src]="p.imageUrl" alt="Product Image" />
-
-          <div class="details">
-            <div class="pname text-center">{{ p.pname }}</div>
-            <p class="text-success text-center">Upto 20% off 1000</p>
-            <div class="cost text-center">only {{ p.price }}/-</div>
-            <button
-              class="btn btn-success form-control"
-              (click)="shopnow(p.productid)"
-            >
-              shop now
-            </button>
-            <i class="bi bi-heart"></i>
-          </div>
-        </div>
-      </div> -->
     <div class="col-3">
       <div class="card">
         <img src="../assets/p-1.jpg" alt="" />
