--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -42,7 +42,7 @@
         </li>
 
         <li class="nav-item">
-          <i class="bi bi-person"></i>
+          <i class="bi bi-person" routerLink="/user/login"></i>
         </li>
         <li class="nav-item">
           <i class="bi bi-heart"></i>
