--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,24 +1,24 @@
 <div class="container-fluid" id="con10">
   <footer>
-    <div class="row">
-      <div class="col">
-        <h3>we are social at</h3>
-        <div class="box">
+    <div class="row text-center text-md-start">
+      <div class="col-12 col-md-4 mb-4 mb-md-0">
+        <h3>We are social at</h3>
+        <div class="box d-flex justify-content-center justify-content-md-start">
           <i class="bi bi-instagram"></i>
           <i class="bi bi-whatsapp"></i>
           <i class="bi bi-linkedin"></i>
           <i class="bi bi-github"></i>
         </div>
       </div>
-      <div class="col">
+      <div class="col-12 col-md-4 mb-4 mb-md-0">
         <h1>Beauty Care</h1>
       </div>
-      <div class="col">
-        <h3>contact</h3>
-        <table>
+      <div class="col-12 col-md-4">
+        <h3>Contact</h3>
+        <table class="mx-auto mx-md-0">
           <tr>
             <td><i class="bi bi-people-fill"></i></td>
-            <td>+91 &nbsp;7036582951</td>
+            <td>+91 7036582951</td>
           </tr>
           <tr>
             <td><i class="bi bi-envelope-fill"></i></td>
