--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -1,8 +1,8 @@
 <app-navbar></app-navbar>
 <div class="container-fluid" id="con1">
   <div class="row">
-    <div class="col-1"></div>
-    <div #content class="col-7 content">
+    <div class="col-1 d-none d-md-block"></div>
+    <div #content class="col-12 col-md-7 content">
       <div class="text">
         <h5>FASTEST GROWING</h5>
         <h3>
@@ -15,10 +15,10 @@
           a atque unde aperiam, praesentium, veritatis voluptaa?
         </p>
 
-        <button class="btn btn-light">Browse Collections</button>
+        <button class="btn animated-btn">Browse Collections</button>
       </div>
     </div>
-    <div #content class="col-4 content"></div>
+    <div #content class="col-12 col-md-4 content"></div>
   </div>
 </div>
 
@@ -44,14 +44,14 @@
   </div>
 </div>
 
-<app-about></app-about>
+<!-- <app-about></app-about> -->
 <div class="container-fluid" id="con3">
   <div #content class="header text-center content my-5">
     <h4>Best Products</h4>
     <h2>Body Essentials</h2>
   </div>
   <div class="row">
-    <div #content class="col-3 content">
+    <div #content class="col-md-3 col-6 content">
       <img src="../assets/card-4.webp" alt="" />
       <div class="details text-center">
         <h4>3 in 1 facila kit</h4>
@@ -62,7 +62,7 @@
         <div class="price">570/-</div>
       </div>
     </div>
-    <div #content class="col-3 content">
+    <div #content class="col-6 col-md-3 content">
       <img src="../assets/card-3.webp " alt="" />
       <div class="details text-center">
         <h4>3 in 1 facila kit</h4>
@@ -73,7 +73,7 @@
         <div class="price">570/-</div>
       </div>
     </div>
-    <div #content class="col-3 content">
+    <div #content class="col-6 col-md-3 content">
       <img src="../assets/card-1.jpeg" alt="" />
       <div class="details text-center">
         <h4>3 in 1 facila kit</h4>
@@ -84,7 +84,7 @@
         <div class="price">570/-</div>
       </div>
     </div>
-    <div #content class="col-3 content">
+    <div #content class="col-6 col-md-3 content">
       <img src="../assets/card-2.webp" alt="" />
       <div class="details text-center">
         <h4>3 in 1 facila kit</h4>
@@ -98,9 +98,9 @@
   </div>
 </div>
 
-<div class="container-fluid" id="con4">
+<!-- <div class="container-fluid" id="con4">
   <div class="row">
-    <div #content class="col-4 content">
+    <div #content class="col-12 col-md-4 content">
       <div class="box1">
         <div class="names">
           <p>GAMBARO</p>
@@ -116,7 +116,8 @@
         </div>
       </div>
     </div>
-    <div #content class="col-4 content">
+
+    <div #content class="col-12 col-md-4 content">
       <div class="box3">
         <div class="name3">
           <p>GAMBARO</p>
@@ -125,7 +126,8 @@
         </div>
       </div>
     </div>
-    <div #content class="col-4 content">
+
+    <div #content class="col-12 col-md-4 content">
       <div class="box4">
         <div class="names2">
           <p>GAMBARO</p>
@@ -142,11 +144,11 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
 
 <div class="container-fluid" id="con5">
   <div class="row">
-    <div #content class="col-7 content">
+    <div #content class="col-12 col-md-7 content">
       <div class="text">
         <h6>WHO WE ARE</h6>
         <h3>
@@ -191,7 +193,7 @@
         Explore Now <i class="bi bi-arrow-up-right"></i>
       </button>
     </div>
-    <div #content class="col-5 d-flex content">
+    <div #content class="col-12 col-md-5 d-flex content">
       <div class="box">
         <img src="../assets/patten-02.webp" alt="" />
       </div>
@@ -205,7 +207,7 @@
     <h2>New Arrivals on Store</h2>
   </div>
   <div class="row">
-    <div #content class="col-3 content">
+    <div #content class="col-12 col-md-6 col-lg-3 content">
       <div class="box">
         <h3>Body Essentials</h3>
         <div class="card">
@@ -243,7 +245,7 @@
         </div>
       </div>
     </div>
-    <div #content class="col-3 content">
+    <div #content class="col-12 col-md-6 col-lg-3 content">
       <div class="box">
         <h3>Body Essentials</h3>
         <div class="card">
@@ -281,7 +283,7 @@
         </div>
       </div>
     </div>
-    <div #content class="col-3 content">
+    <div #content class="col-12 col-md-6 col-lg-3 content">
       <div class="box">
         <h3>Body Essentials</h3>
         <div class="card">
@@ -319,7 +321,7 @@
         </div>
       </div>
     </div>
-    <div #content class="col-3 content">
+    <div #content class="col-12 col-md-6 col-lg-3 content">
       <div class="box">
         <h3>Body Essentials</h3>
         <div class="card">
@@ -495,19 +497,19 @@
       <h2>Healthiest Cosmetics</h2>
     </div>
     <div class="row">
-      <div class="col">
+      <div class="col-6 col-md-6 text-center">
         <div class="products">4300k</div>
         <div class="name">Products Sold</div>
       </div>
-      <div class="col">
+      <div class="col-6 col-md-6 text-center">
         <div class="products">99.99 %</div>
         <div class="name">Satisfaction Guranteed</div>
       </div>
-      <div class="col">
+      <div class="col-6 col-md-6 text-center">
         <div class="products">42 K</div>
         <div class="name">Customers Satisfied</div>
       </div>
-      <div class="col">
+      <div class="col-6 col-md-6 text-center">
         <div class="products">0.01 %</div>
         <div class="name">Defective Returns</div>
       </div>
@@ -526,7 +528,7 @@
     <h3>News & Blogs</h3>
   </div>
   <div class="row">
-    <div #content class="col content">
+    <div #content class="col-md-4 col-12 content">
       <div class="box">
         <img src="../assets/blog-1.webp" alt="" />
         <h3>Premium feather-light, comfortable lipstick</h3>
@@ -537,7 +539,7 @@
         <a href="">Read More</a>
       </div>
     </div>
-    <div #content class="col content">
+    <div #content class="col-md-4 col-12 content">
       <div class="box">
         <img src="../assets/blog-2.webp" alt="" />
         <h3>Long-lasting & quick dry nail polish set</h3>
@@ -548,7 +550,7 @@
         <a href="">Read More</a>
       </div>
     </div>
-    <div #content class="col content">
+    <div #content class="col-md-4 col-12 content">
       <div class="box">
         <img src="../assets/blog-3.webp" alt="" />
         <h3>Wrinkles & acne free best night serum</h3>
