--- a/src/app/productdetails/productdetails.component.html
+++ b/src/app/productdetails/productdetails.component.html
@@ -16,7 +16,7 @@
       <div class="details">
         <h1>{{ product.pname }}</h1>
         <div class="price">{{ product.price }}/-</div>
-        <div class="rating">****</div>
+        <div class="rating"><p>****lkjhgfx</p></div>
         <p>
           {{ product.details }}
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam magni
