--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid" id="con2">
   <div class="row">
-    <div #content class="col content">
+    <div #content class="col-12 col-md-6 content">
       <img src="../assets/SIDE-1.webp" alt="" />
 
       <div class="flower-1">
@@ -15,7 +15,7 @@
         </p>
       </div>
     </div>
-    <div #content class="col content">
+    <div #content class="col-12 col-md-6 content">
       <div class="flower">
         <img src="../assets/rexap,.webp" alt="" />
       </div>
