--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -1,35 +1,58 @@
+#con10 {
+  background-color: #f7efe0;
+}
+
+footer {
+  background: url("/assets/flowe bg.png");
+  background-size: cover;
+  padding: 2pc 0;
+}
+
 footer .col {
-  margin-top: 5pc;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   padding: 10px;
 }
+
 footer .box {
   display: flex;
   flex-direction: row;
-}
-#con10 {
-  background-color: #f7efe0;
 }
 
 footer .box i {
   border-radius: 40px;
   padding: 8px 16px;
   font-size: 1.6em;
-  margin: 1pc;
+  margin: 0.5pc;
   background: #d8d1c1;
 }
-footer {
-  background: url("/assets/flowe bg.png");
-  background-size: cover;
-  height: 50vh;
-}
+
 footer table i {
-  padding: 30px;
+  padding-right: 10px;
   font-size: 1.5em;
 }
+
 footer table {
   margin-top: 10px;
+  text-align: left;
+}
+
+@media (max-width: 768px) {
+  footer .col {
+    align-items: center;
+  }
+  footer table {
+    text-align: center;
+  }
+}
+
+@media (max-width: 576px) {
+  footer .box {
+    justify-content: center;
+  }
+  footer table i {
+    padding-right: 5px;
+  }
 }
