--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -2,6 +2,7 @@ nav {
   background-color: #fff;
   transition: background-color 0.3s ease-in;
   box-shadow: 0 0 25px rgb(0 0 0 / 50%);
+  height: 4pc;
 }
 #navbarNav {
   margin-left: 15pc;
@@ -21,4 +22,60 @@ li i:hover {
 }
 li a:hover {
   color: red;
+}
+img {
+  width: 30px;
+}
+span {
+  color: rgb(224, 87, 110);
+}
+.navbar {
+  background-color: #fff; /* Set your desired background color */
+}
+
+.navbar-brand h3 {
+  font-size: 1.5rem;
+}
+
+.navbar-brand span {
+  color: #ff6f61; /* Highlight color for the brand name */
+}
+
+.navbar-nav .nav-link {
+  color: #000;
+  font-weight: bold;
+  margin: 0 10px;
+}
+
+.navbar-nav .nav-link:hover {
+  color: #ff6f61; /* Hover color for links */
+}
+
+.navbar-nav .nav-item i {
+  font-size: 1.5rem;
+  color: #000;
+  margin: 0 10px;
+}
+
+.navbar-nav .nav-item i:hover {
+  color: #ff6f61; /* Hover color for icons */
+}
+
+@media (max-width: 575.98px) {
+  .navbar-brand h3 {
+    font-size: 1.2rem;
+  }
+
+  .navbar-nav .nav-link {
+    font-size: 1rem;
+    margin: 5px 0;
+  }
+
+  .navbar-nav .nav-item i {
+    font-size: 1.2rem;
+  }
+
+  .navbar-collapse {
+    justify-content: center !important;
+  }
 }
