--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-sm fixed-top">
   <div class="container-fluid">
     <a class="navbar-brand" routerLink="/">
-      <h3>Beauty<span>Care</span>.</h3>
+      <h3>Glow<span>Grove</span></h3>
     </a>
     <button
       class="navbar-toggler"
