--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,24 @@
-<router-outlet></router-outlet>
+<app-navbar></app-navbar>
+<div class="container-fluid" id="con1">
+  <div class="row">
+    <div class="col-1 d-none d-md-block"></div>
+    <div #content class="col-12 col-md-7 content">
+      <div class="text">
+        <h5>FASTEST GROWING</h5>
+        <h3>
+          Luxurious & Premium <br />
+          Products
+        </h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque velit
+          <br />
+          a atque unde aperiam, praesentium, veritatis voluptaa?
+        </p>
+
+        <button class="btn animated-btn">Browse Collections</button>
+      </div>
+    </div>
+    <div #content class="col-12 col-md-4 content"></div>
+  </div>
+</div>
+<app-homepage></app-homepage>
